fix: overflow of list of guesses

--- a/index.css
+++ b/index.css
@@ -103,6 +103,7 @@ main aside {
   display: flex;
   flex-direction: column;
   grid-area: guesses;
+  overflow-y: hidden;
 }
 
 main aside #guesses {
